addon/chrome/content/overlay/multirow.css
/***************************************************************************************
 * multirow / multiple tab lines - modified for Tab Mix Plus ****************************
 * all credits go to the original authors: **********************************************
 * https://www.reddit.com/r/FirefoxCSS/comments/7dclp7/multirow_tabs_in_ff57/ ***********
 * https://github.com/MrOtherGuy/firefox-csshacks/blob/master/chrome/multi-row_tabs.css**
 ****************************************************************************************/

@namespace html url("http://www.w3.org/1999/xhtml");

:root {
  --tab-min-height-mlt: calc(var(--tabmix-tab-min-height) + 2 * var(--tab-block-margin, 0px)) !important;
  --tabmix-scrollbutton-padding: calc(var(--toolbarbutton-inner-padding) + var(--toolbarbutton-outer-padding));
}

/* Automatically reduce tab-block-margin when in multi-row horizontal mode */
:root:has(#tabbrowser-tabs[orient="horizontal"][tabmix-multibar]) {
  --tab-block-margin: 1px;
}

#tabbrowser-tabs {
  min-height: unset !important;
}

.tabbrowser-tab {
  height: var(--tab-min-height-mlt);
}

/* hide default scroll buttons */
#tabbrowser-arrowscrollbox:not([defaultScrollButtons], [tabmix-flowing="scrollbutton"], [tabmix-flowing="singlebar"])::part(overflow-start-indicator),
#tabbrowser-arrowscrollbox:not([defaultScrollButtons], [tabmix-flowing="singlebar"])::part(overflow-end-indicator),
#tabbrowser-arrowscrollbox:not([defaultScrollButtons])::part(scrollbutton-up),
#tabbrowser-arrowscrollbox:not([defaultScrollButtons])::part(scrollbutton-down) {
  display: none;
}

#tabbrowser-arrowscrollbox:not([defaultScrollButtons])[tabmix-flowing="singlebar"]::part(overflow-end-indicator) {
  margin-inline-end: 6px;
}

#tabmix-scrollbox:not([overflowing]),
#tabmix-scrollbox[tabmix-flowing="singlebar"],
#tabmix-scrollbox[verticalTabs],
#tabmix-scrollbox[defaultScrollButtons] {
  visibility: collapse;
}

#tabbrowser-arrowscrollbox[tabmix-flowing="multibar"][orient="horizontal"]::part(scrollbox) {
  display: flex;
  flex-wrap: wrap;
  max-height: calc(var(--tab-min-height-mlt) * var(--tabs-lines));
}

/* waterfox with userChrome enabled set overflow: hidden */
#TabsToolbar[tabmix-flowing="multibar"] {
  height: auto !important;
  overflow: unset !important;
}

#tabbrowser-tabs[tabmix-multibar][orient="horizontal"] .tabbrowser-tab[usercontextid] > .tab-stack > .tab-background > .tab-context-line {
  margin-top: -1px;
}

#tabbrowser-tabs[tabmix-multibar="scrollbar"][orient="horizontal"] #tabbrowser-arrowscrollbox:not(#pinned-tabs-container ~ #tabbrowser-arrowscrollbox) .tabbrowser-tab[pinned] {
  margin-top: -0.5px !important
}

/*
  apply #tabbrowser-arrowscrollbox button style to our buttons
  based on browser/themes/shared/toolbarbuttons.inc.css
*/
#tabmix-scrollbox[scrolledtostart]::part(scrollbutton-up),
#tabmix-scrollbox[scrolledtoend]::part(scrollbutton-down) {
  opacity: 0.4;
}

/* see this.dynamicProtonRules in tab.js for more css rules */

/* based on browser/themes/shared/tabs.inc.css */
#tabmix-scrollbox::part(scrollbutton-up),
#tabmix-scrollbox::part(scrollbutton-down) {
  fill: var(--toolbarbutton-icon-fill, currentColor);
  fill-opacity: 1;
}

#tabmix-scrollbox[orient="vertical"]::part(scrollbutton-up),
#tabmix-scrollbox[orient="vertical"]::part(scrollbutton-down) {
  list-style-image: url("chrome://global/skin/icons/arrow-down.svg");
}

/* swap direction from the original rule
   we place the indicator left to the buttons
*/
#tabmix-scrollbox::part(overflow-start-indicator),
#tabmix-scrollbox::part(overflow-end-indicator) {
  transition: opacity 150ms ease;
}

#tabmix-scrollbox:-moz-locale-dir(ltr)::part(overflow-start-indicator),
#tabmix-scrollbox:-moz-locale-dir(rtl)::part(overflow-end-indicator) {
  transform: scaleX(-1);
}

/* :::: make sure all buttons align to the top row :::: */
#TabsToolbar[tabmix-flowing="multibar"] #TabsToolbar-customization-target,
#TabsToolbar[tabmix-flowing="multibar"] .toolbarbutton-1:not([id="tabs-newtab-button"]) {
  align-items: flex-start;
}

#TabsToolbar[tabmix-flowing="multibar"] .titlebar-buttonbox-container {
  height: calc(var(--tab-min-height-mlt));
  margin-block: 0;
}

#TabsToolbar[tabmix-multibar] .titlebar-buttonbox-container {
  height: calc(var(--tab-min-height-mlt) + var(--tabmix-titlebar-buttonbox-offset));
}

:root[uidensity="compact"] {
  --tabmix-private-browsing-indicator-margin-top: 9px;
}

:root:not([uidensity="compact"]) #TabsToolbar[tabmix-flowing="multibar"] .toolbarbutton-1:not([id="tabs-newtab-button"]) {
  margin-top: var(--tabmix-button-margin-top-proton) !important;
}

:root[uidensity="compact"] #TabsToolbar[tabmix-flowing="multibar"] .toolbarbutton-1:not([id="tabs-newtab-button"]) {
  margin-top: var(--tabmix-button-margin-top-proton-compact) !important;
}

#tabbrowser-tabs[orient="horizontal"] > .tab-drop-indicator {
  pointer-events: none;
}

#tabbrowser-tabs[tabmix-multibar][orient="horizontal"] > .tab-drop-indicator {
  margin-top: calc(var(--tab-min-height-mlt) * (var(--tabmix-visiblerows) - 1) + var(--tabmix-multirow-margin, 0));
}

/* browser/themes/shared/tabs.inc.css */

/* Tab Overflow */
#tabmix-scrollbox[orient="vertical"]::part(overflow-start-indicator),
#tabmix-scrollbox[orient="vertical"]::part(overflow-end-indicator) {
  display: none;
}

#tabmix-scrollbox:not([scrolledtostart])::part(overflow-start-indicator),
#tabmix-scrollbox:not([scrolledtoend])::part(overflow-end-indicator) {
  width: 7px; /* The width is the sum of the inline margins */
  background-image: radial-gradient(ellipse at bottom,
                                    rgb(0 0 0 / 10%) 0%,
                                    rgb(0 0 0 / 10%) 7.6%,
                                    rgb(0 0 0 / 0%) 87.5%);
  background-repeat: no-repeat;
  background-position: -3px;
  border-left: .5px solid rgb(255 255 255 / 20%);
  pointer-events: none;
  position: relative;
  z-index: 3; /* the selected tab's z-index + 1 */
  border-bottom: .5px solid transparent;
}

/* original margin-inline: -.5px -6.5px; */
#tabmix-scrollbox:not([scrolledtostart])::part(overflow-start-indicator) {
  margin-inline: -6.5px -.5px;
}

/* original margin-inline: -6.5px -.5px; */
#tabmix-scrollbox:not([scrolledtoend])::part(overflow-end-indicator) {
  margin-inline: -.5px -6.5px;
}

#tabmix-scrollbox[scrolledtostart]::part(overflow-start-indicator),
#tabmix-scrollbox[scrolledtoend]::part(overflow-end-indicator) {
  opacity: 0;
}

#tabbrowser-arrowscrollbox[tabmix-dragging="enable-scroll-buttons"] {
  position: relative;

  &::part(scrollbutton-up),
  &::part(scrollbutton-down) {
    position: absolute;
    width: 100%;
    height: calc(var(--tab-min-height-mlt) / 2);
    z-index: 1;
    opacity: 0;
  }

  &::part(scrollbutton-up) {
    top: 0;
  }

  &::part(scrollbutton-down) {
    bottom: 0;
  }

  &:not([scrolledtostart])::part(scrollbutton-up),
  &:not([scrolledtoend])::part(scrollbutton-down) {
    display: flex !important;
  }
}

/* based on browser/themes/shared/tabbrowser/tabs.css */
@media not -moz-pref("sidebar.verticalTabs") {
  .tabbrowser-tab[tabmix-movingtab-togroup] > .tab-stack > .tab-background > .tab-group-line {
    display: flex;
    background-color: light-dark(var(--dragover-tab-group-color), var(--dragover-tab-group-color-invert));
    border-radius: var(--border-radius-xsmall, 1px);
  }

  .tab-group-overflow-count-container {
    #tabbrowser-tabs[tabmix-multibar] tab-group[collapsed][hasmultipletabs][hasactivetab] > & {
      display: flex;
    }
  }
}

@media (width <= 1250px) {
  :root {
    --tabmix-safe-tab-width: clamp(20vw, var(--tabmix-tab-max-width, 250px), 40vw);
  }

  #pinned-tabs-container[orient="horizontal"] {
    max-width: calc(80vw - var(--tabmix-safe-tab-width));
  }

  #tabbrowser-arrowscrollbox[orient="horizontal"] {
    min-width: max(20vw, var(--tabmix-safe-tab-width));
  }
}

#tabbrowser-tabs[orient="horizontal"] tab-split-view-wrapper {
  margin-block: 0;
  padding: 0;

  /**
   * extend max-width to include width for note and media icons on split view tabs
   *
   * Note Logic (0, 20, or 40)
   * Media Logic (0, 24, or 48)
  */
  --extra-note: 0px;
  --extra-media: 0px;

  &:has(> .tabbrowser-tab[tab-note]) {
    --extra-note: 20px;
  }

  &:has(> .tabbrowser-tab:is([muted], [soundplaying], [activemedia-blocked])) {
    --extra-media: 24px;
  }

  &:has(> .tabbrowser-tab[tab-note] + .tabbrowser-tab[tab-note]) {
    --extra-note: 40px;
  }

  &:has(> .tabbrowser-tab:is([muted], [soundplaying], [activemedia-blocked]) + .tabbrowser-tab:is([muted], [soundplaying], [activemedia-blocked])) {
    --extra-media: 48px;
  }

  --base-width: calc((var(--tab-min-width-pref, var(--tab-min-width)) + var(--tab-min-width-uidensity, 0px)) * 2 + 6px);
  --total-min-required: calc(var(--base-width) + var(--extra-note) + var(--extra-media));

  min-width: var(--total-min-required) !important;
  max-width: max(var(--tabmix-inline-max-width, var(--tab-max-width)), var(--total-min-required)) !important;

  :root[uidensity="compact"] & .tab-background {
    --tab-min-height: 25px !important;
  }

  .tabbrowser-tab > .tab-stack > .tab-background {
    margin-block: var(--tab-block-margin);
  }

  .tabbrowser-tab:first-child > .tab-stack > .tab-background {
    margin-inline-end: -2px;
  }

  .tabbrowser-tab:last-child > .tab-stack > .tab-background {
    margin-inline-start: -2px;
  }

  :root:has(#tabbrowser-tabs[tabmix-multibar]:not([tabmix-tabsFitRow], [widthFitTitle])) & {
    max-width: var(--total-min-required) !important;
  }

  :root:has(#tabbrowser-tabs[tabmix-multibar][tabmix-tabsFitRow]) & {
    flex: 1 1 0%;
  }

  /* remove border on tab and move it to .tab-background */
  &:not([hasactivetab]) {
    & .tabbrowser-tab {
      &:last-child {
        border-inline-start: none;

        .tab-background {
          border-inline-start: 1px solid var(--toolbarbutton-icon-fill);
        }
      }
    }
  }

  tab-group & .tabbrowser-tab > .tab-stack > .tab-background > .tab-group-line,
  & .tabbrowser-tab[tabmix-movingtab-togroup] > .tab-stack > .tab-background > .tab-group-line {
    inset-block-end: var(--tab-group-line-toolbar-border-distance);
  }

  &:not(:has([dragtarget])) {
    .tabbrowser-tab:first-child > .tab-stack > .tab-background {
      border-end-end-radius: 0;
      border-start-end-radius: 0;
    }

    .tabbrowser-tab:last-child > .tab-stack > .tab-background {
      border-start-start-radius: 0;
      border-end-start-radius: 0;
    }
  }

  /* Bug 2007061 - Dragging a group that contains a Split View will not hide
     the Split View if the Split View is selected
  */

  /* stylelint-disable-next-line no-descending-specificity */
  tab-group[movingtabgroup] & {
    min-width: 0 !important;
    max-width: 0 !important;
    max-height: 0 !important;
    padding: 0;
    margin: 0;
    overflow: hidden;
  }
}

#tabbrowser-tabs[tabmix-multibar][orient="horizontal"] {
  --tab-group-line-toolbar-border-distance: 0;
}

#tabbrowser-tabs:not([tabmix-multibar])[tabmix-flowing="multibar"][orient="horizontal"] {
  --tab-group-line-toolbar-border-distance: 3px;
}

#tabbrowser-tabs[tabmix-multibar][tabmix-tabsFitRow] tab-group > .tabbrowser-tab[fadein] {
  transition: none !important;
}

